# kanban-realtime-fastapi

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 4833010823e2_init.py
src/: database.py  enums.py  main.py
src/api/: __init__.py  auth.py  boards.py  cards.py  checklist.py  columns.py  comments.py  dependencies.py  invites.py  tags.py  user_board_preferences.py  users.py
src/core/: config.py  security.py
src/models/: __init__.py  boards.py  cards.py  columns.py  invites.py  members.py  user_board_preferences.py  user_column_preferences.py  users.py
src/models/cards/: attachments.py  cards.py  (+5 more)
src/permissions/: __init__.py  permissions.py  permissions_check.py  roles.py
src/redis/: __init__.py  client.py  tokens.py  ws_sessions.py
src/repositories/: __init__.py  board.py  board_preference.py  card.py  column.py  invite.py  user.py
src/schemas/: __init__.py  boards.py  cards.py  columns.py  invites.py  members.py  user_board_preferences.py  user_column_preferences.py  users.py
src/services/: __init__.py  auth.py  board.py  board_preference.py  card.py  columns.py  invite.py  user.py
src/ws/: __init__.py  endpoints.py  manager.py  payloads.py
tests/: conftest.py
tests/api/: test_boards.py  test_cards.py  test_checklists.py  test_columns.py  test_comments.py  test_invite.py  test_tags.py  test_users.py
tests/auth/: test_jwt.py  test_password.py
tests/data/: __init__.py  boards.py  cards.py  columns.py  prefixes.py  users.py
(+22 files in other folders)
