[project]
name = "kanban-realtime-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.122.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.13",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0",
    "uvicorn>=0.38.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.7",
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
    "websocket>=0.2.1",
    "wsproto>=1.3.2",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
